<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rackki_learning</name>
  <version>0.0.0</version>
  <description>Learning-related scripts and tools for the RackKI project</description>
  <maintainer email="scherzin@fzi.de">scherzin</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>std_srvs</depend>
  <depend>controller_interface</depend>
  <depend>kdl_parser</depend>
  <depend>urdf</depend>
  <depend>rackki_interfaces</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>

  <test_depend>python3-pytest</test_depend>
  <test_depend>python3-pytest-cov</test_depend>
  <test_depend>ament_cmake_pytest</test_depend>
  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>controller_manager</test_depend>
  <test_depend>controller_manager_msgs</test_depend>
  <test_depend>launch_testing_ament_cmake</test_depend>
  <test_depend>xacro</test_depend>
  <test_depend>joint_state_broadcaster</test_depend>
  <test_depend>robot_state_publisher</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
