<?xml version="1.0"?>
<package>
  <name>cartesian_controller_base</name>
  <version>0.0.0</version>
  <description>The cartesian_controller_base package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <maintainer email="scherzin@fzi.de">scherzin</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <license>BSD-3-Clause</license>


  <!-- Url tags are optional, but multiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <!-- Example: -->
  <url type="repository">https://github.com/fzi-forschungszentrum-informatik/cartesian_controllers</url> 


  <!-- Author tags are optional, multiple are allowed, one per tag -->
  <!-- Authors do not have to be maintainers, but could be -->
  <!-- Example: -->
  <author email="scherzin@fzi.de">Stefan Scherzinger</author> 


  <!-- The *_depend tags are used to specify dependencies -->
  <!-- Dependencies can be catkin packages or system dependencies -->
  <!-- Examples: -->
  <!-- Use build_depend for packages you need at compile time: -->
  <!--   <build_depend>message_generation</build_depend> -->
  <!-- Use buildtool_depend for build tool packages: -->
  <!--   <buildtool_depend>catkin</buildtool_depend> -->
  <!-- Use run_depend for packages you need at runtime: -->
  <!--   <run_depend>message_runtime</run_depend> -->
  <!-- Use test_depend for packages you need only for testing: -->
  <!--   <test_depend>gtest</test_depend> -->
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>controller_interface</build_depend>
  <build_depend>kdl_parser</build_depend>
  <build_depend>trajectory_msgs</build_depend>
  <build_depend>control_toolbox</build_depend>
  <build_depend>eigen_conversions</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>pluginlib</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>controller_interface</run_depend>
  <run_depend>kdl_parser</run_depend>
  <run_depend>trajectory_msgs</run_depend>
  <run_depend>control_toolbox</run_depend>
  <run_depend>eigen_conversions</run_depend>
  <run_depend>dynamic_reconfigure</run_depend>
  <run_depend>pluginlib</run_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
    <cartesian_controller_base plugin="${prefix}/ik_solver_plugin.xml"/>
  </export>
</package>
